--- a/package.json
+++ b/package.json
@@ -3,22 +3,51 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "nodemonConfig": {
+    "verbose": true,
+    "ignore": [
+      "node_modules",
+      ".next",
+      "test",
+      "log",
+      "dist",
+      ".vscode"
+    ],
+    "watch": [
+      "server/*",
+      "common/*",
+      "@types/*",
+      "dto/*",
+      "config/default.json"
+    ],
+    "exec": "NODE_OPTIONS='--inspect' ts-node -r tsconfig-paths/register --project tsconfig.server.json server/index.ts",
+    "ext": "ts json",
+    "delay": "1000",
+    "env": {
+      "NODE_ENV": "development",
+      "NODE_CONFIG_ENV": "development"
+    }
+  },
   "dependencies": {
+    "@hapi/hapi": "^20.2.2",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/hapi__hapi": "^20.0.12",
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.8.2",
     "typescript": "4.7.4"
   }
 }
