--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "@hapi/vision": "^6.1.0",
+    "ejs": "^3.1.8",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
