--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "nodemon": "^2.0.19",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5",
     "ts-node": "^10.8.2",
     "typescript": "4.7.4"
   }
