--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
     }
   },
   "dependencies": {
+    "@hapi/catbox-redis": "^6.0.2",
     "@hapi/hapi": "^20.2.2",
     "@hapi/vision": "^6.1.0",
+    "@hapi/yar": "^10.1.1",
     "ejs": "^3.1.8",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/hapi__catbox-redis": "^5.0.4",
     "@types/hapi__hapi": "^20.0.12",
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
